style : fixed overflow bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,7 +58,7 @@
   }
 }
 .decorative {
-  background-image: url("/Image_decoration.svg");
+  background-image: url("/Image_decoration.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
